// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CelebrationScreen next extra back is false should fire required next actions 1`] = `
Array [
  Object {
    "type": "reload journey",
  },
  Object {
    "type": "pop to top of stack",
  },
  Object {
    "type": "pop once",
  },
]
`;

exports[`CelebrationScreen next extra back is true should fire required next actions 1`] = `
Array [
  Object {
    "type": "reload journey",
  },
  Object {
    "type": "pop to top of stack",
  },
  Object {
    "type": "pop once",
  },
  Object {
    "type": "pop once",
  },
  Object {
    "type": "app/SET_COMPLETE_STEP_EXTRA_BACK",
    "value": false,
  },
]
`;
